--- a/Estimote Demo/index.html
+++ b/Estimote Demo/index.html
@@ -9,7 +9,7 @@
     <script src="cordova.js"></script>
     <script src="kendo/js/jquery.min.js"></script>
     <script src="kendo/js/kendo.mobile.min.js"></script>
-
+    <script src="scripts/beacons.js"></script>    
     <script src="scripts/app.js"></script>
 
 </head>
@@ -26,9 +26,9 @@
         
         <div data-role="footer">
             <div data-role="tabstrip">
-                <a href="views/home.html" data-icon="home">Home</a>   
-                <a href="views/settings.html" data-icon="settings">Settings</a>
-                <a href="views/contacts.html" data-icon="contacts">Contacts</a>
+                <a href="views/beacons.html"><div class="icon icon-target"></div>Beacons</a>   
+                <a href="views/scan.html"><div class="icon icon-focus"></div>Scan</a>
+                <a href="views/about.html"><div class="icon icon-lightbulb"></div>About</a>
             </div>
         </div>
     </div>
