--- a/Estimote Demo/index.html
+++ b/Estimote Demo/index.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title></title>
     <meta charset="utf-8" />
     <link href="kendo/styles/kendo.mobile.all.min.css" rel="stylesheet" />
     <link href="styles/main.css" rel="stylesheet" />
-
     <script src="cordova.js"></script>
     <script src="kendo/js/jquery.min.js"></script>
     <script src="kendo/js/kendo.mobile.min.js"></script>
-    <script src="scripts/beacons.js"></script>    
+    <script src="scripts/beacons.js"></script>
     <script src="scripts/app.js"></script>
-
 </head>
+
 <body>
- 
     <div data-role="layout" data-id="main">
         <div data-role="header">
             <div data-role="navbar">
                 <span data-role="view-title"></span>
             </div>
         </div>
-
         <!-- application views will be rendered here -->
-        
         <div data-role="footer">
             <div data-role="tabstrip">
-                <a href="views/beacons.html"><div class="icon icon-target"></div>Beacons</a>   
-                <a href="views/scan.html"><div class="icon icon-focus"></div>Scan</a>
+                <a href="views/beacons.html">
+                    <div class="icon icon-target"></div>Beacons</a>
+                <a href="views/scan.html">
+                    <div class="icon icon-focus"></div>Scan</a>
             </div>
         </div>
     </div>
-
 </body>
+
 </html>
